--- a/laravel/package.json
+++ b/laravel/package.json
@@ -14,6 +14,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "openai": "^4.52.0"
+        "jsdom": "^24.1.0",
+        "openai": "^4.52.0",
+        "papaparse": "^5.4.1",
+        "xlsx": "^0.18.5"
     }
 }
