--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .DS_Store
 laravel/composer.phar
+laravel/_ide_helper.php
+laravel/dbdump.xml
+laravel/style.xsl
+laravel/util/datas/出力データまとめ.xlsx
+laravel/util/datas/reviews/アットコスメ_リップ_レビュー_再開.json
+laravel/util/datas/reviews/アットコスメ_リップ_レビュー_再開.xlsx
+laravel/util/datas/reviews/アットコスメ_リップ_レビュー_再開2.json
+laravel/util/datas/reviews/アットコスメ_リップ_レビュー_再開2.xlsx
+laravel/util/datas/reviews/アットコスメ_リップ_レビュー.json
+laravel/util/datas/reviews/アットコスメ_リップ_レビュー.xlsx
+laravel/util/datas/tproducts/20240626_1158_lips_00001-00367.json
+laravel/util/datas/tproducts/20240626_1158_lips_00001-00367.xlsx
+laravel/util/datas/tproducts/出力データまとめ.xlsx
+laravel/util/outcsv/現在データまとめ.xlsx
